--- a/src/meson.build
+++ b/src/meson.build
@@ -5,35 +5,41 @@ mod_id = get_option('mod_id')
 is_snapshot = get_option('snapshot')
 is_beta = get_option('beta')
 is_mod = mod_id > 0
-conf_data.set('X86', is_x86 ? 'true' : 'false')
-conf_data.set('BETA', is_beta ? 'true' : 'false')
+conf_data.set('X86', is_x86.to_string())
+conf_data.set('BETA', is_beta.to_string())
 conf_data.set('MOD_ID', mod_id)
-conf_data.set('DEBUG', is_debug ? 'true' : 'false')
-conf_data.set('MOD', is_mod ? 'true' : 'false')
-conf_data.set('SNAPSHOT', is_snapshot ? 'true' : 'false')
+conf_data.set('DEBUG', is_debug.to_string())
+conf_data.set('MOD', is_mod.to_string())
+conf_data.set('SNAPSHOT', is_snapshot.to_string())
 conf_data.set('SNAPSHOT_ID', get_option('snapshot_id'))
-conf_data.set('ALLOW_FAKE_NEWER_VERSION', (is_snapshot or is_beta or is_debug or is_mod) ? 'true' : 'false')
+conf_data.set('ALLOW_FAKE_NEWER_VERSION', (is_snapshot or is_beta or is_debug or is_mod).to_string())
 conf_data.set('IDENT_PLATFORM', ident_platform)
 conf_data.set('IDENT', '@0@-@1@-@2@'.format(host_arch, host_platform, host_libc).to_upper())
 
 update_server = get_option('update_server')
 conf_data.set('UPDATESERVER', update_server)
-conf_data.set('USE_UPDATESERVER', update_server != '' ? 'true' : 'false')
+conf_data.set('USE_UPDATESERVER', (update_server != '').to_string())
 
 enforce_https = get_option('enforce_https')
 allow_quit = true
+allow_window_frame_ops = true
+allow_data_folder = true
 if host_platform == 'emscripten'
 	allow_quit = false
+	allow_window_frame_ops = false
+	allow_data_folder = false
 endif
 secure_ciphers_only = get_option('secure_ciphers_only')
 if not is_debug and not enforce_https
 	error('refusing to build a release binary without enforcing HTTPS, configure with -Denforce_https=true to fix this error')
 endif
-conf_data.set('ALLOW_QUIT', allow_quit ? 'true' : 'false')
-conf_data.set('ENFORCE_HTTPS', enforce_https ? 'true' : 'false')
-conf_data.set('SECURE_CIPHERS_ONLY', secure_ciphers_only ? 'true' : 'false')
+conf_data.set('ALLOW_QUIT', allow_quit.to_string())
+conf_data.set('ALLOW_WINDOW_FRAME_OPS', allow_window_frame_ops.to_string())
+conf_data.set('ALLOW_DATA_FOLDER', allow_data_folder.to_string())
+conf_data.set('ENFORCE_HTTPS', enforce_https.to_string())
+conf_data.set('SECURE_CIPHERS_ONLY', secure_ciphers_only.to_string())
 
-conf_data.set('IGNORE_UPDATES', get_option('ignore_updates') ? 'true' : 'false')
+conf_data.set('IGNORE_UPDATES', get_option('ignore_updates').to_string())
 conf_data.set('SERVER', get_option('server'))
 conf_data.set('STATICSERVER', get_option('static_server'))
 conf_data.set('APPNAME', get_option('app_name'))
