Sort out version info
The idea is to have the following version information included:

 - 1-component save version
   - 2-component under the hood but the minor component shouldn't ever change again
   - see currentVersionMajor in GameSave.cpp
 - 1-component website API version
   - again, currently 2-component because that's what the website code expects
   - see apiVersion in requestmanager/Common.cpp
 - 2-component display version, entirely cosmetic
   - exposed as meson options display_version_major and display_version_minor
   - see APP_VERSION in Config.template.h
 - 1-component business logic version aka build number
   - exposed as meson option build_num
   - see APP_VERSION in Config.template.h
 - variant id aka mod id, tightly coupled with the build number
   - exposed as meson option mod_id
   - see MOD_ID in Config.template.h
 - display and business logic versions repeated for the upstream
   - exposed as meson options upstream_version_major, upstream_version_minor, and upstream_build_num
   - we'll have to update these alongside display_version_major, display_version_minor, and build_num, but mod owners can just merge our changes
   - see UPSTREAM_VERSION in Config.template.h
 - update channel, makes sense in the context of the variant (and yes, this would later enable mod snapshots)
   - currently not exposed as a meson option but derived from meson options snapshot and mod_id
   - see IDENT_RELTYPE in Config.template.h
 - vcs tag aka git commit hash
   - set by build.sh in ghactions workflows
   - see VCS_TAG in VcsTag.tempalte.h

Rather importantly, the save and website API versions are now allowed to change independently of the display version.

These changes also allowed me to remove the ugly sed hacks in build.sh used to provision some manifest files; they are now provisioned by meson.

Also add version info for windows and android.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -44,6 +44,48 @@ option(
 	description: 'Snapshot ID, only relevant if \'snapshot\' is true'
 )
 option(
+	'display_version_major',
+	type: 'integer',
+	min: 0,
+	value: 97,
+	description: 'Major component of the display version, should more or less map to the MINOR version in semantic versioning'
+)
+option(
+	'display_version_minor',
+	type: 'integer',
+	min: 0,
+	value: 0,
+	description: 'Minor component of the display version, should more or less map to the PATCH version in semantic versioning'
+)
+option(
+	'build_num',
+	type: 'integer',
+	min: 0,
+	value: 352,
+	description: 'Build number, should be strictly monotonously increasing across public releases'
+)
+option(
+	'upstream_version_major',
+	type: 'integer',
+	min: 0,
+	value: 97,
+	description: 'Major component of the upstream display version, mod owners should not change this but merge upstream changes to it'
+)
+option(
+	'upstream_version_minor',
+	type: 'integer',
+	min: 0,
+	value: 0,
+	description: 'Minor component of the upstream display version, mod owners should not change this but merge upstream changes to it'
+)
+option(
+	'upstream_build_num',
+	type: 'integer',
+	min: 0,
+	value: 352,
+	description: 'Upstream build number, mod owners should not change this but merge upstream changes to it'
+)
+option(
 	'mod_id',
 	type: 'integer',
 	min: 0,
@@ -226,4 +268,22 @@ option(
 	choices: [ 'no', 'static_release_only', 'yes' ],
 	value: 'static_release_only',
 	description: 'Enable VCS tag resolution, introduces an always-stale custom target'
+)
+option(
+	'manifest_copyright',
+	type: 'string',
+	value: 'Copyright © 2008-2011 Stanislaw K Skowrenek, Copyright © 2011-2023 Simon Robertshaw, Copyright © 2016-2023 jacob1',
+	description: 'Copyright string, don\'t take too seriously, subject to change'
+)
+option(
+	'manifest_macos_min_ver',
+	type: 'string',
+	value: '',
+	description: 'MacOS minimum allowed platform version string, used by ghactions workflows, not useful otherwise'
+)
+option(
+	'manifest_date',
+	type: 'string',
+	value: '',
+	description: 'Build date string, used by ghactions workflows, not useful otherwise'
 )
