--- a/src/meson.build
+++ b/src/meson.build
@@ -12,6 +12,15 @@ conf_data.set('DEBUG', is_debug.to_string())
 conf_data.set('MOD', is_mod.to_string())
 conf_data.set('SNAPSHOT', is_snapshot.to_string())
 conf_data.set('SNAPSHOT_ID', get_option('snapshot_id'))
+conf_data.set('DISPLAY_VERSION_MAJOR', get_option('display_version_major'))
+conf_data.set('DISPLAY_VERSION_MINOR', get_option('display_version_minor'))
+conf_data.set('BUILD_NUM', get_option('build_num'))
+conf_data.set('UPSTREAM_VERSION_MAJOR', get_option('upstream_version_major'))
+conf_data.set('UPSTREAM_VERSION_MINOR', get_option('upstream_version_minor'))
+conf_data.set('UPSTREAM_BUILD_NUM', get_option('upstream_build_num'))
+conf_data.set('MANIFEST_COPYRIGHT', get_option('manifest_copyright'))
+conf_data.set('MANIFEST_MACOS_MIN_VER', get_option('manifest_macos_min_ver'))
+conf_data.set('MANIFEST_DATE', get_option('manifest_date'))
 conf_data.set('ALLOW_FAKE_NEWER_VERSION', (is_snapshot or is_beta or is_debug or is_mod).to_string())
 conf_data.set('IDENT_PLATFORM', ident_platform)
 conf_data.set('IDENT', '@0@-@1@-@2@'.format(host_arch, host_platform, host_libc).to_upper())
