--- a/meson_options.txt
+++ b/meson_options.txt
@@ -37,13 +37,6 @@ option(
 	description: 'Snapshot build'
 )
 option(
-	'snapshot_id',
-	type: 'integer',
-	min: 0,
-	value: 0,
-	description: 'Snapshot ID, only relevant if \'snapshot\' is true'
-)
-option(
 	'display_version_major',
 	type: 'integer',
 	min: 0,
@@ -140,7 +133,7 @@ option(
 	'update_server',
 	type: 'string',
 	value: '',
-	description: 'Update server, only used by snapshots and mods, see \'snapshot_id\' and \'mod_id\''
+	description: 'Update server, only used by snapshots and mods, see \'snapshot\' and \'mod_id\''
 )
 option(
 	'workaround_noncpp_lua',
