Fix exe description on windows
Apparently ProductName is less important than FileDescription so the latter is what will say "The Powder Toy" and similar from now on.

Also fix the copyright character in LegalCopyright by telling the resource compile that the file is utf-8.

--- a/resources/powder-res.template.rc
+++ b/resources/powder-res.template.rc
@@ -1,3 +1,5 @@
+#pragma code_page(65001) // UTF-8
+
 #include "@RESOUCE_H@"
 #include <winuser.h>
 #include <winver.h>
@@ -16,11 +18,11 @@ PRODUCTVERSION @DISPLAY_VERSION_MAJOR@,@DISPLAY_VERSION_MINOR@,0,@BUILD_NUM@
 		BLOCK "040904b0"
 		{
 			VALUE "CompanyName",      "https://powdertoy.co.uk/\0"
-			VALUE "FileDescription",  "@APPCOMMENT@\0"
+			VALUE "FileDescription",  "@APPNAME@\0"
 			VALUE "FileVersion",      "@DISPLAY_VERSION_MAJOR@.@DISPLAY_VERSION_MINOR@.0.@BUILD_NUM@\0"
 			VALUE "OriginalFilename", "@APPEXE@.exe\0"
 			VALUE "LegalCopyright",   "@MANIFEST_COPYRIGHT@\0"
-			VALUE "ProductName",      "@APPNAME@\0"
+			VALUE "ProductName",      "@APPCOMMENT@\0"
 			VALUE "ProductVersion",   "@DISPLAY_VERSION_MAJOR@.@DISPLAY_VERSION_MINOR@.0.@BUILD_NUM@\0"
 			VALUE "InternalName",     "@APPID@\0"
 		}
