--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -62,6 +62,8 @@ jobs:
     steps:
       - run: git config --global core.autocrlf false
       - uses: actions/checkout@v3
+      - if: matrix.force_msys2_bash == 'yes'
+        run: bash -c './.github/force-msys2-bash.sh'
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
