Add stack trace to bluescreen on some systems
This is still complete nonsense on posix systems where bluescreen runs in a signal handler, but what can you do.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -286,3 +286,10 @@ option(
 	value: true,
 	description: 'Enable platform clipboard, allows copying simulation data between different windows'
 )
+option(
+	'use_bluescreen',
+	type: 'combo',
+	choices: [ 'no', 'yes', 'auto' ],
+	value: 'auto',
+	description: 'Show blue error screen upon unhandled signals and exceptions'
+)
