Fix bluescreen stack trace not showing exception frames

--- a/src/common/platform/stacktrace/meson.build
+++ b/src/common/platform/stacktrace/meson.build
@@ -7,8 +7,8 @@ if host_platform == 'windows'
 	endif
 	stacktrace_files = files('Windows.cpp')
 elif host_platform == 'darwin'
-	# stacktrace_files = files('Execinfo.cpp') # macos has this but it's useless >_>
-	stacktrace_files = files('Null.cpp')
+	# TODO: good impl; current one is only slightly better than nothing
+	stacktrace_files = files('Execinfo.cpp')
 elif host_platform == 'linux'
 	# TODO: again, this is more like "posix" than "linux"
 	stacktrace_files = files('Execinfo.cpp')
