Disable exe icons in mingw ghactions builds
So 1ef0c1a3e0a2 didn't help at all, great. Either I'm terrible enough at C++ to get the same thing wrong twice, or this is a mingw bug, in which case I'm not willing to waste time trying to figure it out.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -293,3 +293,9 @@ option(
 	value: 'auto',
 	description: 'Show blue error screen upon unhandled signals and exceptions'
 )
+option(
+	'windows_icons',
+	type: 'boolean',
+	value: true,
+	description: 'Add icon resources to the executable on Windows'
+)
