--- a/resources/meson.build
+++ b/resources/meson.build
@@ -32,42 +32,52 @@ else
 endif
 
 if host_platform == 'windows'
-	make_ico = executable('makeico', sources: 'MakeIco.cpp', native: true)
-	generated_win_icos = {}
-	win_icos = {
-		'icon_exe': [ 'icon_exe', 'icon_exe_48', 'icon_exe_32', 'icon_exe_16' ],
-		'icon_cps': [ 'icon_cps', 'icon_cps_48', 'icon_cps_32', 'icon_cps_16' ],
-	}
-	foreach key, icons : win_icos
-		command = [
-			make_ico,
-			'@OUTPUT@',
-		]
-		foreach ikey : icons
-			command += [ rendered_icons[ikey] ]
+	windows_icons = get_option('windows_icons')
+	rc_conf_depends = []
+	icon_exe_ico_path = ''
+	icon_cps_ico_path = ''
+	if windows_icons
+		make_ico = executable('makeico', sources: 'MakeIco.cpp', native: true)
+		generated_win_icos = {}
+		win_icos = {
+			'icon_exe': [ 'icon_exe', 'icon_exe_48', 'icon_exe_32', 'icon_exe_16' ],
+			'icon_cps': [ 'icon_cps', 'icon_cps_48', 'icon_cps_32', 'icon_cps_16' ],
+		}
+		foreach key, icons : win_icos
+			command = [
+				make_ico,
+				'@OUTPUT@',
+			]
+			foreach ikey : icons
+				command += [ rendered_icons[ikey] ]
+			endforeach
+			generated_win_icos += { key: custom_target(
+				key + '-ico',
+				output: key + '.ico',
+				command: command,
+			) }
 		endforeach
-		generated_win_icos += { key: custom_target(
-			key + '-ico',
-			output: key + '.ico',
-			command: command,
-		) }
-	endforeach
+		rc_conf_depends += [
+			generated_win_icos['icon_exe'],
+			generated_win_icos['icon_cps'],
+		]
+		icon_exe_ico_path = join_paths(meson.current_build_dir(), 'icon_exe.ico')
+		icon_cps_ico_path = join_paths(meson.current_build_dir(), 'icon_cps.ico')
+	endif
 	rc_conf_data = configuration_data()
 	rc_conf_data.merge_from(conf_data)
+	rc_conf_data.set('HAVE_ICONS', windows_icons ? 1 : 0)
 	rc_conf_data.set('RESOUCE_H', join_paths(meson.current_source_dir(), 'resource.h'))
 	rc_conf_data.set('WINUTF8_XML', join_paths(meson.current_source_dir(), 'winutf8.xml'))
-	rc_conf_data.set('ICON_EXE_ICO', join_paths(meson.current_build_dir(), 'icon_exe.ico'))
-	rc_conf_data.set('ICON_CPS_ICO', join_paths(meson.current_build_dir(), 'icon_cps.ico'))
+	rc_conf_data.set('ICON_EXE_ICO', icon_exe_ico_path)
+	rc_conf_data.set('ICON_CPS_ICO', icon_cps_ico_path)
 	powder_files += windows_mod.compile_resources(
 		configure_file(
 			input: 'powder-res.template.rc',
 			output: 'powder-res.rc',
 			configuration: rc_conf_data,
 		),
-		depends: [
-			generated_win_icos['icon_exe'],
-			generated_win_icos['icon_cps'],
-		],
+		depends: rc_conf_depends,
 		depend_files: [
 			'resource.h',
 			'winutf8.xml',
