--- a/resources/powder-res.template.rc
+++ b/resources/powder-res.template.rc
@@ -5,8 +5,11 @@
 #include <winver.h>
 #include <ntdef.h>
 
+#define HAVE_ICONS @HAVE_ICONS@
+#if HAVE_ICONS
 IDI_ICON ICON DISCARDABLE "@ICON_EXE_ICO@"
 IDI_DOC_ICON ICON DISCARDABLE "@ICON_CPS_ICO@"
+#endif
 CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "@WINUTF8_XML@"
 
 VS_VERSION_INFO VERSIONINFO
