Disable custom executable manifest in vs ghactions workflows
See 1ff6a2d0ae3a for the original problem. The fix in that commit was a bad idea, the patch got stale and broke the previous commit.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -299,3 +299,9 @@ option(
 	value: true,
 	description: 'Add icon resources to the executable on Windows'
 )
+option(
+	'windows_utf8cp',
+	type: 'boolean',
+	value: true,
+	description: 'Ask Windows nicely for UTF-8 as the codepage'
+)
