Replace resource tools with python scripts
May fix pipeline failures on ghactions where makeico or toarray just exit with a non-zero status for no reason.

Also makes it easier (possible, rather) to build TPT using a cross-compiling msvc toolchain on windows; you can't have two different msvc toolchains in PATH on windows because of course you can't.

toarray had been python before, maybe I converted it to cpp to avoid pulling in python as a dependency, I'm not sure. With android vanilla development (hopefully) gaining traction soon, we'll be relying anyway on helper scripts I've written in python, so python will be a dependency sooner or later. Meson implicitly makes python a dependency, but there could be Meson implementations out there that don't rely on python, who knows.

--- a/meson.build
+++ b/meson.build
@@ -6,9 +6,6 @@ project(
 		'c_std=c99',
 		'cpp_std=c++17',
 		'cpp_rtti=false',
-		'build.c_std=c99', # used by to_array
-		'build.cpp_std=c++17', # used by to_array
-		'build.cpp_rtti=false', # used by to_array
 	],
 	meson_version: '>=0.64.0',
 )
@@ -20,9 +17,9 @@ endif
 
 fs = import('fs')
 to_array = generator(
-	executable('toarray', sources: 'resources/ToArray.cpp', native: true),
+	find_program('python'),
 	output: [ '@PLAINNAME@.cpp', '@PLAINNAME@.h' ],
-	arguments: [ '@OUTPUT0@', '@OUTPUT1@', '@INPUT@', '@EXTRA_ARGS@' ]
+	arguments: [ join_paths(meson.current_source_dir(), 'resources/to-array.py'), '@OUTPUT0@', '@OUTPUT1@', '@INPUT@', '@EXTRA_ARGS@' ]
 )
 
 render_icons_with_inkscape = get_option('render_icons_with_inkscape')
