Fix assumption that python is called python
The assumption was introduced by 7e674a887d69, where find_program('python') was used instead of Meson's built-in python discovery services. This turned out to be a bad idea because of course there are systems in 2024 where python is not python 3.

--- a/meson.build
+++ b/meson.build
@@ -15,9 +15,12 @@ if get_option('prepare')
 	subdir_done()
 endif
 
+python = import('python')
+python3_prog = python.find_installation('python3')
+
 fs = import('fs')
 to_array = generator(
-	find_program('python'),
+	python3_prog,
 	output: [ '@PLAINNAME@.cpp', '@PLAINNAME@.h' ],
 	arguments: [ join_paths(meson.current_source_dir(), 'resources/to-array.py'), '@OUTPUT0@', '@OUTPUT1@', '@INPUT@', '@EXTRA_ARGS@' ]
 )
