--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      - run: python -m pip install meson==1.2.3 ninja # TODO: go back to using latest meson once https://github.com/mesonbuild/meson/pull/12544 is live
+      - run: python -m pip install meson ninja
       - id: prepare
         run: python ./.github/prepare.py
         env:
@@ -100,7 +100,7 @@ jobs:
         with:
           python-version: '3.10'
       - if: matrix.force_msys2_bash != 'yes'
-        run: python -m pip install meson==1.2.3 ninja # TODO: go back to using latest meson once https://github.com/mesonbuild/meson/pull/12544 is live
+        run: python -m pip install meson ninja
       - if: matrix.bsh_build_platform == 'darwin'
         run: brew install bash coreutils
       - run: bash -c './.github/build.sh'
