--- a/meson.build
+++ b/meson.build
@@ -85,7 +85,7 @@ tpt_libs_debug = is_debug ? 'debug' : 'release'
 tpt_libs_variant = '@0@-@1@-@2@-@3@'.format(host_arch, host_platform, host_libc, tpt_libs_static)
 tpt_libs_vtag = get_option('tpt_libs_vtag')
 if tpt_libs_vtag == ''
-	tpt_libs_vtag = 'v20240112165024'
+	tpt_libs_vtag = 'v20241107133630'
 endif
 if tpt_libs_static != 'none'
 	if tpt_libs_variant not in [
@@ -95,6 +95,8 @@ if tpt_libs_static != 'none'
 		'x86_64-windows-msvc-dynamic',
 		'x86-windows-msvc-static',
 		'x86-windows-msvc-dynamic',
+		'aarch64-windows-msvc-static',
+		'aarch64-windows-msvc-dynamic',
 		'x86_64-darwin-macos-static',
 		'aarch64-darwin-macos-static',
 		'x86-android-bionic-static',
