--- a/src/resampler/meson.build
+++ b/src/resampler/meson.build
@@ -2,6 +2,6 @@ resampler_files = files(
 	'resampler.cpp',
 )
 
-powder_files += resampler_files
+powder_source_files += resampler_files
 render_files += resampler_files
 font_files += resampler_files
