Split powder_files into source and external files
Right now, there's only a big list of files to be compiled into an
executable. Most are .cpp files, but some are python scripts and other
things that aren't source code.

In order to run clang-tidy, we must assemble a list that only contains
source files.

--- a/meson.build
+++ b/meson.build
@@ -436,6 +436,9 @@ project_export_dynamic = false
 subdir('src')
 subdir('resources')
 
+powder_files = []
+powder_files += powder_external_files
+powder_files += powder_source_files
 powder_files += data_files
 render_files += data_files
 font_files += data_files
