--- a/src/lua/luascripts/meson.build
+++ b/src/lua/luascripts/meson.build
@@ -1,1 +1,1 @@
-luaconsole_files += to_array.process('compat.lua', extra_args: 'compat_lua')
+powder_external_files += to_array.process('compat.lua', extra_args: 'compat_lua')
