Add clang-tidy support
Run meson compile clang-tidy in the build directory to lint your code
for issues. Currently, clang-tidy is configured not to check for
anything, so the command will fail.

--- a/meson.build
+++ b/meson.build
@@ -558,3 +558,19 @@ if get_option('build_font')
 		link_depends: copied_dlls,
 	)
 endif
+
+if get_option('clang_tidy')
+	clang_tidy = find_program('run-clang-tidy', required: false)
+
+	if clang_tidy.found()
+		run_target('clang-tidy',
+			command: [
+				clang_tidy,
+				'-p', meson.project_build_root(),
+				'-config-file', files('.clang-tidy'),
+				'-quiet',
+				powder_source_files
+			]
+		)
+	endif
+endif
